--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>21 Savage</h1>
-  <h2>Why you trappin so hard?</h2>
+  <h1>Comment Box for 21 Savage</h1>
+  <h2>Free to write whatever you like! Have the best comment, win a call from Sr.Savage himself</h2>
 
 
   <h3>Messages</h3>
